--- a/index.html
+++ b/index.html
@@ -4,6 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Meu Projeto de Matemática|| </title>
+  <style>
+    body{
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color:#000033;
+      color: white;
+    }
+    header{
+      background-color: navy;
+      padding:20px;
+      text-align: center;
+      font-size: 2em;
+      font-weight: bold;
+    }
+    .banner{
+      background-color: darkred;
+      padding: 20px;
+      display: flex;
+      align-items: center;
+      justify-centent: space-around;
+    }
+  
+  </style>
 </head>
 <body>
   <h1>Signos do Zodíacos</h1>
